5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1712_2502.log
== TEST (2019-05-13 23:01:27) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
while(c<k):
	j=(12**(1/2))*((-1**(i+1))*(1/y*3**z))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- OUTPUT:
-15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:01:42) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
while(c<k):
	j=(12**(1/2))*((-1**(i+1))*(1/y*3**z))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- OUTPUT:
-15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:02:05) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
while(c<k):
	j=(12**(1/2))*(((-1)**(i+1))*(1/y*3**z))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- OUTPUT:
15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:02:10) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
while(c<k):
	j=(12**(1/2))*(((-1)**(i+1))*(1/y*3**z))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- OUTPUT:
15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:03:37) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
while(c<k):
	if(k>1):
		j=(12**(1/2))*(((-1)**(i+1))*(1/y*3**z))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- OUTPUT:
15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:05:42) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
while(c<k):
	if(k>1):
		a=(12**(1/2))
		w=(((-1)**(i+1))
		j=a*((w)*(1/y*3**z)))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- ERROR:
File "XXXX", line 12
    j=a*((w)*(1/y*3**z)))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:05:53) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
while(c<k):
	if(k>1):
		a=(12**(1/2))
		w=(((-1)**(i+1)))
		j=a*((w)*(1/y*3**z)))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- ERROR:
File "XXXX", line 12
    j=a*((w)*(1/y*3**z)))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:06:08) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
while(c<k):
	if(k>1):
		a=(12**(1/2))
		w=(((-1)**(i+1)))
		j=a*((w)*(1/y*3**z))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- OUTPUT:
15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:07:00) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		j=a*((w)*(1/y*3**z))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    j=a*((w)*(1/y*3**z))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:07:11) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		j=((w)*(1/y*3**z))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- OUTPUT:
4474.37066277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:07:36) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=1
y=1
z=0
i=1
h=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		j=((w)*(1/y*3**z))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- OUTPUT:
1662.51351992
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:07:39) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=1
y=1
z=0
i=1
h=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		j=((w)*(1/y*3**z))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- OUTPUT:
1662.51351992
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:07:43) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=1
y=1
z=0
i=1
h=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		j=((w)*(1/y*3**z))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- OUTPUT:
1662.51351992
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:07:50) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=1
y=1
z=0
i=1
h=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		j=((w)*(1/y*3**z))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h, 8))
	
	
-- OUTPUT:
1662.51351992
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:08:41) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=1
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		j=((w)*(1/y*3**z))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
5759.11576953
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:08:58) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		j=((w)*(1/y*3**z))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:09:14) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		w=(((-1)**(i+1)))
		j=((w)*(1/y*3**z))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:09:19) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		w=(((-1)**(i+1)))
		j=((w)*(1/y*3**z))
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:10:00) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		v=(1/y*3**z)
		w=(((-1)**(i+1)))
		j=w*v
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:10:37) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		v=(1/y*3**z)
		w=(((-1)**(i+1)))
		j=w*v
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	i=i+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:10:59) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		v=(1/y*3**z)
		w=(((-1)**(i+1)))
		j=w*v
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	i=i+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:11:07) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		v=(1/y*3**z)
		w=(((-1)**(i+1)))
		j=w*v
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	i=i+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:12:20) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		v=(1/y*3**z)
		w=(((-1)**(i+1)))
		j=w*v
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	i=i+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:12:24) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		v=(1/y*3**z)
		w=(((-1)**(i+1)))
		j=w*v
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	i=i+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:13:01) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		v=(1/y*3**z)
		w=(-1)**(i+1)
		j=w*v
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	i=i+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:13:05) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=0
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		v=(1/y*3**z)
		w=(-1)**(i+1)
		j=w*v
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	i=i+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:13:34) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=1
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		v=(1/y*3**z)
		w=(-1)**(i+1)
		j=w*v
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	i=i+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
-2614.97174629
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:13:38) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=1
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		v=(1/y*3**z)
		w=(-1)**(i+1)
		j=w*v
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	i=i+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
-2614.97174629
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:13:42) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=1
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		v=(1/y*3**z)
		w=(-1)**(i+1)
		j=w*v
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	i=i+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
-2614.97174629
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:13:45) 
-- CODE:
from math import*
k=int(input("repeticoes:"))
c=1
a=(12**(1/2))
y=1
z=0
i=1
h=0
while(c<k):
	if(k>=1):
		v=(1/y*3**z)
		w=(-1)**(i+1)
		j=w*v
	else:
		j=(12**(1/2))
	c=c+1
	y=y+2
	z=z+1
	i=i+1
	h=h+j
print(round(h*a, 8))
	
	
-- OUTPUT:
-2614.97174629
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:19:02) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1/(y*(3**(z)))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	h=h+j
print(round((h*a), 8)
-- ERROR:
File "XXXX", line 11
    j=w*v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:19:14) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1/(y*(3**(z))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	h=h+j
print(round((h*a), 8)
-- ERROR:
File "XXXX", line 19
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:19:21) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1/(y*(3**(z))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	h=h+j
print(round((h*a), 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    h=h+j
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:19:35) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1/(y*(3**(z))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	h=h+j
print(round((h*a), 8))
-- OUTPUT:
2.59807132
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:19:50) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1/(y*(3**(z))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	h=h+j
print(round((h), 8))
-- OUTPUT:
0.74999859
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:20:12) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1/(y*(3**(z))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
0.90689962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:20:30) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1/(y*(3**(z))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))
-- OUTPUT:
3.14159245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:21:12) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1/(y*(3**(z))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
0.90689962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:36:33) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1/(y*(3**(z))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
0.90689962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:36:49) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1/(y*(3**(z))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
0.90689962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:36:57) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1/(y*(3**(z))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
0.90689962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:37:52) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
-0.90689962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:38:22) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
0.90689962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:38:29) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
0.90689962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:38:37) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
0.90689962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:38:41) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<=k):
	if(k>=1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=0
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
0.90689962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:39:42) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<=k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
0.90689962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:40:18) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
-0.09310013
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:40:25) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
-0.09310013
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:40:59) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
-0.09310013
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:41:08) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))
-- OUTPUT:
-0.32250831
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:41:16) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))
-- OUTPUT:
-0.32250831
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:41:34) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))
-- OUTPUT:
-0.32250831
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:42:47) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
-0.09310013
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:42:59) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=(1-(1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
-0.09310013
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:43:07) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
-0.90689987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:43:13) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h), 8))
-- OUTPUT:
-0.90689987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:43:21) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=0
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))
-- OUTPUT:
-3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:43:45) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:43:54) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 23:44:00) 
-- CODE:
k=int(input("repeticoes:"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**(z)))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))
-- EXECUTION TIME:
0.133131
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
